completed flex-layout

--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -33,6 +33,7 @@
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
       </ul>
+      <div></div>
       <ul class="right-links">
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
